Add fixes & Features